@@ -6,6 +6,7 @@ Revision history for Perl extension Coro.
           and not the reference. might fix a few bugs, certainly did introduce
           new ones.
         - Coro::Timer (independent of Event).
+        - new timed_wait functions for Coro::Signal, Semaphore, SemaphoreSet.
 
 0.52 Tue Nov  6 21:36:18 CET 2001
 	- ported to cygwin (trivial).
